--- a/project/hello.html
+++ b/project/hello.html
@@ -290,7 +290,7 @@
             <div class="slot" data-index="0">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\1.jpg"
+                  <img src="./imgs/1.jpg"
                        alt="Memory 1"
                        data-message="Our first silly Selfie jo tm lene k baad boli thi chal chal nikal😂. It still makes me smile">
                 </div>
@@ -302,7 +302,7 @@
             <div class="slot" data-index="1">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\2.jpg"
+                  <img src="./imgs/2.jpg"
                        alt="Memory 2"
                        data-message="I love every time you hold my arm . It makes me feel ki I'm your man and 
                        you are my girl. You look very cute in this photo baby and as always I'm too lucky to have you as my world❤️">
@@ -315,7 +315,7 @@
             <div class="slot" data-index="2">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\3.jpg"
+                  <img src="./imgs/3.jpg"
                        alt="Memory 3"
                        data-message="This was the day of our first scooty ride.. I look so chomu in
                         this one and I remember you being scared behind me 😂😂">
@@ -328,7 +328,7 @@
             <div class="slot" data-index="3">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\4.jpg"
+                  <img src="./imgs/4.jpg"
                        alt="Memory 4"
                        data-message="This was the day when we were discussing our Apprentice wala 
                        situation and you were telling me to calm down. You have been my therapist baby😘 and 
@@ -342,7 +342,7 @@
             <div class="slot" data-index="4">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\5.jpg"
+                  <img src="./imgs/5.jpg"
                        alt="Memory 5"
                        data-message="The day when I found myself on the edge of holding of myself🤭. And its not my fault you were looking so fine
                        and by this time everyone considered us as couples and I kind of liked it alot. Also the day i got my first flying kiss🌚❤️">
@@ -355,7 +355,7 @@
             <div class="slot" data-index="5">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\6.jpg"
+                  <img src="./imgs/6.jpg"
                        alt="Memory 6"
                        data-message="God you looked so good that day baby...and that hug I miss it soo much. First time i felt ki you reallyy miss me">
                 </div>
@@ -367,7 +367,7 @@
             <div class="slot" data-index="6">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\7.jpg"
+                  <img src="./imgs/7.jpg"
                        alt="Memory 7"
                        data-message="This was our first time meeting in P&M mall. The Darr and the excitement i felt in my stomach was toooo much😂😂">
                 </div>
@@ -379,7 +379,7 @@
             <div class="slot" data-index="7">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\8.jpg"
+                  <img src="./imgs/8.jpg"
                        alt="Memory 8"
                        data-message="This was the first time when you held my ar and meant the world to me">
                 </div>
@@ -391,7 +391,7 @@
             <div class="slot" data-index="8">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\9.jpg"
+                  <img src="./imgs/9.jpg"
                        alt="Memory 9"
                        data-message="That random weekday that felt like a holiday just because we were together.">
                 </div>
@@ -403,7 +403,7 @@
             <div class="slot" data-index="9">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\10.jpg"
+                  <img src="./imgs/10.jpg"
                        alt="Memory 10"
                        data-message="The surprise you planned that I’ll never forget.">
                 </div>
@@ -415,7 +415,7 @@
             <div class="slot" data-index="10">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\11.jpg"
+                  <img src="./imgs/11.jpg"
                        alt="Memory 11"
                        data-message="That time we tried to bake and set off the fire alarm—pure chaos, pure love.">
                 </div>
@@ -427,7 +427,7 @@
             <div class="slot" data-index="11">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\12.jpg"
+                  <img src="./imgs/12.jpg"
                        alt="Memory 12"
                        data-message="A quiet evening, a blanket, and your head on my shoulder.">
                 </div>
@@ -439,7 +439,7 @@
             <div class="slot" data-index="12">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\13.jpg"
+                  <img src="./imgs/13.jpg"
                        alt="Memory 13"
                        data-message="The concert where you knew every lyric and I just watched you glow.">
                 </div>
@@ -451,7 +451,7 @@
             <div class="slot" data-index="13">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\14.jpg"
+                  <img src="./imgs/14.jpg"
                        alt="Memory 14"
                        data-message="The photo that still makes me think: ‘How did I get this lucky?’">
                 </div>
@@ -463,7 +463,7 @@
             <div class="slot" data-index="14">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\15.jpg"
+                  <img src="./imgs/15.jpg"
                        alt="Memory 15"
                        data-message="The day we promised we’d always have each other’s back.">
                 </div>
@@ -475,7 +475,7 @@
             <div class="slot" data-index="15">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\16.jpg"
+                  <img src="./imgs/16.jpg"
                        alt="Memory 16"
                        data-message="Laughing so hard we couldn’t even take a proper photo.">
                 </div>
@@ -487,7 +487,7 @@
             <div class="slot" data-index="16">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\17.jpg"
+                  <img src="./imgs/17.jpg"
                        alt="Memory 17"
                        data-message="Seven years of us, and it still feels like the beginning.">
                 </div>
@@ -499,7 +499,7 @@
             <div class="slot" data-index="17">
               <div class="card-3d"><div class="card-inner">
                 <div class="card-front">
-                  <img src="C:\Users\Tayyab\Documents\DSA\project\imgs\18.jpg"
+                  <img src="./imgs/18.jpg"
                        alt="Memory 18"
                        data-message="A lifetime to go, and I want every chapter to be with you.">
                 </div>
@@ -617,3 +617,4 @@
   </script>
 </body>
 </html>
+
