--- a/project/hello.html
+++ b/project/hello.html
@@ -381,7 +381,9 @@
                 <div class="card-front">
                   <img src="./imgs/8.jpg"
                        alt="Memory 8"
-                       data-message="This was the first time when you held my ar and meant the world to me">
+                       data-message="This was the first time when you held my and and meant the world to me.
+                       Also this was the first time when we were twinning and you looked jorjeous baby and
+                       I could really feel the love in your eyes that day and I was loving every sec of it 😘❤️">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -393,7 +395,10 @@
                 <div class="card-front">
                   <img src="./imgs/9.jpg"
                        alt="Memory 9"
-                       data-message="That random weekday that felt like a holiday just because we were together.">
+                       data-message="This was the day jaha se everything started this is the only photo from that day 
+                       and for me this was the most important day of our relationship . From this day onwards I decided
+                       to be serious and started planning to propose you ❤️❤️. I held your hand for about 2 hours that 
+                       day hihi">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -405,7 +410,8 @@
                 <div class="card-front">
                   <img src="./imgs/10.jpg"
                        alt="Memory 10"
-                       data-message="The surprise you planned that I’ll never forget.">
+                       data-message="I have told you this uss din bhi pr I'll tell you again this look of yuors is the best
+                       you looked wonderful that day and I love these pictures of yours. You ekdm look top-tier Item🤭🤭">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -417,7 +423,8 @@
                 <div class="card-front">
                   <img src="./imgs/11.jpg"
                        alt="Memory 11"
-                       data-message="That time we tried to bake and set off the fire alarm—pure chaos, pure love.">
+                       data-message="This was the first time I held your waist without consent and It gave me confidence 
+                       And sachi baby I love holding Your waist and pulling you closerrr . Makes me feel like your hubby❤️(cringee attackkkkk)">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -429,7 +436,8 @@
                 <div class="card-front">
                   <img src="./imgs/12.jpg"
                        alt="Memory 12"
-                       data-message="A quiet evening, a blanket, and your head on my shoulder.">
+                       data-message="Just look at yourself my cupcake how can I not fall for you my sweetest being on the planet❤️❤️
+                       Meri Mithuuuuu">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -441,7 +449,7 @@
                 <div class="card-front">
                   <img src="./imgs/13.jpg"
                        alt="Memory 13"
-                       data-message="The concert where you knew every lyric and I just watched you glow.">
+                       data-message="You Know why I loveeee this 🌚❤️">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -453,7 +461,7 @@
                 <div class="card-front">
                   <img src="./imgs/14.jpg"
                        alt="Memory 14"
-                       data-message="The photo that still makes me think: ‘How did I get this lucky?’">
+                       data-message="When we meet you were soooo scared that day cutie🤭. Loved eating softie with my softie">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -465,7 +473,8 @@
                 <div class="card-front">
                   <img src="./imgs/15.jpg"
                        alt="Memory 15"
-                       data-message="The day we promised we’d always have each other’s back.">
+                       data-message="This photo reminds me how perfect we are together. I just want to marry you somehow baby
+                       I just wish to be with you forever and ever . My lovely baby❤️">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -477,7 +486,9 @@
                 <div class="card-front">
                   <img src="./imgs/16.jpg"
                        alt="Memory 16"
-                       data-message="Laughing so hard we couldn’t even take a proper photo.">
+                       data-message="I love you Baby and I'm sorry for every time I hurt you ya I dont live up to Your
+                       expectations . Pr I alwaysss want to keep you happy and make you smile like this and stuff you with allll
+                       my love 💕">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -489,7 +500,7 @@
                 <div class="card-front">
                   <img src="./imgs/17.jpg"
                        alt="Memory 17"
-                       data-message="Seven years of us, and it still feels like the beginning.">
+                       data-message="Heheee Meri Chalti Phirti Cocaineeeeee . Kya hi Maal ho Aap cutie🤭">
                 </div>
                 <div class="card-back"></div>
               </div></div>
@@ -501,7 +512,10 @@
                 <div class="card-front">
                   <img src="./imgs/18.jpg"
                        alt="Memory 18"
-                       data-message="A lifetime to go, and I want every chapter to be with you.">
+                       data-message="Happy 7 years baby ❤️. I could never ever get a better life partner then you .
+                       You make my life complete and I'll always be grateful for this day without you nothing would have happened.
+                       Thank you for everything my bestest baby ❤️ demnn we look so good together babyyy🤭11111111111111
+                       ">
                 </div>
                 <div class="card-back"></div>
               </div></div>
