--- a/project/hello.html
+++ b/project/hello.html
@@ -514,7 +514,7 @@
                        alt="Memory 18"
                        data-message="Happy 7 years baby ❤️. I could never ever get a better life partner then you .
                        You make my life complete and I'll always be grateful for this day without you nothing would have happened.
-                       Thank you for everything my bestest baby ❤️ demnn we look so good together babyyy🤭11111111111111
+                       Thank you for everything my bestest baby ❤️ demnn we look so good together babyyy🤭
                        ">
                 </div>
                 <div class="card-back"></div>
